# kuvaaja

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
include/: Camera.hpp  Common.hpp  Config.hpp.in  Context.hpp  Control.hpp  Debug.hpp  DirectionalLight.hpp  Light.hpp  Material.hpp  PointLight.hpp  Positionable.hpp  Renderable.hpp  Scene.hpp  Shader.hpp  ShaderData.hpp  ShaderDataManager.hpp  ShaderProgram.hpp  SpotLight.hpp  Texture.hpp  test.hh
include/model/: Box.hpp  Model.hpp  PrimitiveModel.hpp  Quad.hpp  Triangle.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Context.cpp  Control.cpp  DirectionalLight.cpp  Light.cpp  Material.cpp  PointLight.cpp  Positionable.cpp  Renderable.cpp  Scene.cpp  ShaderDataManager.cpp  ShaderProgram.cpp  SpotLight.cpp  Texture.cpp  main.cc  main.cpp
src/model/: Box.cpp  Model.cpp  PrimitiveModel.cpp  Quad.cpp  Triangle.cpp
